--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="URL_mapa_alrededores">http://industry-esri-co.maps.arcgis.com/home/webmap/viewer.html?webmap=65e9f1658b0747b2ae2caeb622177580</string>
 </resources>
