--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,16 @@
     <!-- http://industry-esri-co.maps.arcgis.com/home/webmap/viewer.html?webmap=65e9f1658b0747b2ae2caeb622177580 -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-        <string name="URL_mapa_alrededores">http://industry-esri-co.maps.arcgis.com/home/webmap/viewer.html?webmap=a8410481de324757aaf6ebb79aa501e2</string>
+    <string name="URL_mapa_alrededores">http://industry-esri-co.maps.arcgis.com/home/webmap/viewer.html?webmap=a8410481de324757aaf6ebb79aa501e2</string>
 
     <string name="map_search_placeholder">Ejemplo,  calle 90 13 40 Bogotá</string>
+    <string name="title_activity_ar">ARActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+
+
+    <string name="gps_loading_text">GPS is loading...</string>
 </resources>
