Optimizando lineas de codigo:creación de fragments en el main

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
 
 
     <string name="gps_loading_text">GPS is loading...</string>
+
+    <!-- MENU CONFIGURACION -->
+    <string name="txt_menu_layer">Administrar capas</string>
+    <string name="txt_menu_title_settings">Configuraciones</string>
 </resources>
