--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="URL_mapa_alrededores">http://industry-esri-co.maps.arcgis.com/home/webmap/viewer.html?webmap=a8410481de324757aaf6ebb79aa501e2</string>
-
+    <string name="URL_capa_parqueaderos">https://services.arcgis.com/8DAUcrpQcpyLMznu/arcgis/rest/services/parqueaderos/FeatureServer/0</string>
     <string name="map_search_placeholder">Ejemplo,  calle 90 13 40 Bogotá</string>
     <string name="title_activity_ar">ARActivity</string>
 
